# muppinllm

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: basic_analysis.py  export_json.py  portfolio_analysis.py
muppinllm/: __init__.py  analyst.py  cli.py  models.py
muppinllm/analyzers/: __init__.py  fundamental.py  sentiment.py  technical.py
muppinllm/data_sources/: __init__.py  coingecko.py  dexscreener.py
muppinllm/utils/: __init__.py  helpers.py
tests/: __init__.py  test_analyzers.py  test_data_sources.py  test_models.py
